gnome-desktop3 (3.16.2-1) UNRELEASED; urgency=medium

  * New upstream release.
  * Remove debian/patches/realpath-PATH_MAX.patch, upstream dropped the
    libgsystem dependency.
  * Drop obsolete Breaks/Replaces from pre-wheezy.
  * Drop explicit Build-Depends on dpkg-dev, even the version from wheezy
    provides dpkg-vendor.

 -- Michael Biebl <biebl@debian.org>  Tue, 26 May 2015 01:39:37 +0200

gnome-desktop3 (3.14.1-1) unstable; urgency=medium

  [ Tim Lunn ]
  * debian/rules: Drop obsolete scrollkeeper configure flag

  [ Sjoerd Simons ]
  * New upstream release

 -- Sjoerd Simons <sjoerd@debian.org>  Sun, 19 Oct 2014 17:10:20 +0200

gnome-desktop3 (3.14.0-1) unstable; urgency=medium

  * debian/watch: only search for stable releases.
  * New upstream release.
  * Upload to unstable.

 -- Andreas Henriksson <andreas@fatal.se>  Tue, 23 Sep 2014 00:10:19 +0200

gnome-desktop3 (3.13.91-1) experimental; urgency=medium

  * New upstream development release.
  * debian/libgnome-desktop-3-10.symbols:
    Add new symbol gnome_wall_clock_string_for_datetime@Base 3.13.91

 -- Andreas Henriksson <andreas@fatal.se>  Sat, 06 Sep 2014 05:54:46 -0700

gnome-desktop3 (3.12.2-2) unstable; urgency=medium

  * Add debian/patches/realpath-PATH_MAX.patch (from upstream libgsystem)
    - avoids PATH_MAX to hopefully fix FTBFS on Hurd.

 -- Andreas Henriksson <andreas@fatal.se>  Tue, 15 Jul 2014 23:49:32 +0200

gnome-desktop3 (3.12.2-1) unstable; urgency=medium

  * New upstream release.
  * Bump Standards-Version to 3.9.5
  * Upload to unstable.

 -- Andreas Henriksson <andreas@fatal.se>  Mon, 14 Jul 2014 23:13:58 +0200

gnome-desktop3 (3.12.1-1) experimental; urgency=medium

  * Drop conflicts against libgnome-desktop-3-7 because it is not 
    necessary: only leaf packages in G3.8 use gnome-desktop, including 
    gnome-shell that does work with the new g-desktop library.
  * New upstream bugfix release.

 -- Josselin Mouette <joss@debian.org>  Sat, 26 Apr 2014 14:09:27 +0200
