@@ -1,1 +1,1 @@
-usr/lib/girepository-1.0
+usr/lib/*/girepository-1.0
