@@ -6,6 +6,8 @@ gnome-desktop3 (3.16.2-1) UNRELEASED; urgency=medium
   * Drop obsolete Breaks/Replaces from pre-wheezy.
   * Drop explicit Build-Depends on dpkg-dev, even the version from wheezy
     provides dpkg-vendor.
+  * Convert to multiarch. This includes moving the gnome-rr-debug tool into an
+    architecture qualified path.
 
  -- Michael Biebl <biebl@debian.org>  Tue, 26 May 2015 01:39:37 +0200
 
